tests/correctness/resources/miniboxing/tests/compile/mb_normalize_9.check
Miniboxing plugin warning: Optimizing `MbArray`s, tuples and functions can only be done if you allow the plugin to use both long and double encodings (remove the `P:minibox:Yone-way` compiler option). In this run, the above classes will be generic and will box.
newSource1.scala:9: error: The method overrideMe in class Norm2 overrides method overrideMe in class Norm1 therefore needs to have the follwing type parameters marked with @miniboxed: type B.
  override def overrideMe[@miniboxed A, B, @miniboxed C](a: A, b: B, c: C): A = ???
               ^
[Now checking: minibox-inject]